life-events/main/default/objects/LifeEvents__c/fields/EventDate__c.field-meta.xml
<CustomField>
    <fullName>EventDate__c</fullName>
    <label>Event Date</label>
    <type>Date</type>
</CustomField>