life-events/main/default/objects/LifeEvents__c/fields/EventLocation__c.field-meta.xml
<CustomField>
    <fullName>EventLocation__c</fullName>
    <label>Event Location</label>
    <type>Text</type>
    <length>255</length>
</CustomField>