life-events/main/default/objects/LifeEvents__c/fields/EventType__c.field-meta.xml
<CustomField>
    <fullName>EventType__c</fullName>
    <label>Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Birth</fullName>
            </value>
            <value>
                <fullName>Graduation</fullName>
            </value>
            <value>
                <fullName>Job</fullName>
            </value>
            <value>
                <fullName>Marriage</fullName>
            </value>
            <value>
                <fullName>Retirement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>