life-events/main/default/objects/LifeEvents__c/fields/RelatedTo__c.field-meta.xml
<CustomField>
    <fullName>RelatedTo__c</fullName>
    <label>Related To</label>
    <type>Lookup</type>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Life Events</relationshipLabel>
    <relationshipName>Life_Events</relationshipName>
</CustomField>